--- a/ps2.html
+++ b/ps2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deva Tech Services</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-app.css">
 </head>
 <body> <nav id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
