--- a/ps3.html
+++ b/ps3.html
@@ -10,7 +10,7 @@
         <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
         
         <div class="sidebar-header">
-            <h3>Select Console</h3>
+            <h3>Menu</h3>
         </div>
         
         <ul class="nav-links">
