--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             
             <nav class="main-nav">
                 <a href="#" class="nav-button active">Home</a>
+                <a href="pc.html" class="nav-button active">PC Library</a>
                 <a href="ps2.html" class="nav-button active">PS2 Library</a>
                 <a href="ps3.html" class="nav-button active">PS3 Library</a>
                 <a href="ps4.html" class="nav-button active">PS4 Library</a>
