--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
         </div>
     </div>
 
+    <footer class="site-footer">
+        <p>&copy; 2025 Deva Tech Services. All Rights Reserved.</p>
+        <p>This is a personal project. All game titles and posters are trademarks of their respective owners.</p>
+    </footer>
+
+</body>
+</html>
 </body>
 </html>
