--- a/pc.html
+++ b/pc.html
@@ -136,5 +136,12 @@
         }
     </script>
 
+    <footer class="site-footer">
+        <p>&copy; 2025 Deva Tech Services. All Rights Reserved.</p>
+        <p>This is a personal project. All game titles and posters are trademarks of their respective owners.</p>
+    </footer>
+
+</body>
+</html>
 </body>
 </html>
