--- a/ps2.html
+++ b/ps2.html
@@ -37,6 +37,14 @@
         <div id="loading">Loading Games...</div>
 
         <div id="galleryContainer"></div>
+        <div id="loader-bottom" class="loader-bottom-hidden">Loading more...</div>
+
+        <div id="noResults" class="no-results-hidden">
+            <h2>No games found.</h2>
+            <p>Try searching for a different title.</p>
+        </div>
+
+        <div class="page-nav">
     </div>
     
     <button onclick="scrollToTop()" id="goToTopBtn" title="Go to top">▲</button>
