--- a/pc.html
+++ b/pc.html
@@ -180,7 +180,7 @@
             mybutton.style.visibility = "hidden";
           }
         }
-        function scrollTo.scrollToTop() {
+        function scrollToTop() {
           window.scrollTo({top: 0, behavior: 'smooth'});
         }
     </script>
