--- a/pc.html
+++ b/pc.html
@@ -13,11 +13,12 @@
             <h3>Menu</h3>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="pc.html" class="nav-link active">PC</a></li> <li><a href="ps2.html" class="nav-link">PS2</a></li>
-            <li><a href="ps3.html" class="nav-link disabled">PS3</a></li>
-            <li><a href="ps4.html" class="nav-link disabled">PS4</a></li>
-            <li><a href="ps5.html" class="nav-link disabled">PS5</a></li>
+            <li><a href="index.html" class="nav-link active">Home</a></li>
+            <li><a href="ps2.html" class="nav-link active">PS2</a></li>
+            <li><a href="ps3.html" class="nav-link active" >PS3</a></li>
+            <li><a href="ps4.html" class="nav-link active">PS4</a></li>
+            <li><a href="ps5.html" class="nav-link active">PS5</a></li>
+            <li><a href="#" class="nav-link active">PC</a></li>
         </ul>
     </nav>
     
