--- a/ps5.html
+++ b/ps5.html
@@ -19,6 +19,7 @@
             <li><a href="ps3.html" class="nav-link active" >PS3</a></li>
             <li><a href="ps4.html" class="nav-link active">PS4</a></li>
             <li><a href="#" class="nav-link active">PS5</a></li>
+            <li><a href="xbox.html" class="nav-link active">XBOX</a></li>
         </ul>
     </nav>
     
