--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <a href="https://wa.link/hhl1he" class="nav-button whatsapp-button" target="_blank" rel="noopener noreferrer">
                 WhatsApp
             </a>
-                <a href="pc.html" class="nav-button active">PC Library</a>
-                <a href="ps2.html" class="nav-button active">PS2 Library</a>
-                <a href="ps3.html" class="nav-button active">PS3 Library</a>
-                <a href="ps4.html" class="nav-button active">PS4 Library</a>
-                <a href="ps5.html" class="nav-button active">PS5 Library</a>
+                <a href="pc.html" class="nav-button active">PC Games</a>
+                <a href="ps2.html" class="nav-button active">PS2 Games</a>
+                <a href="ps3.html" class="nav-button active">PS3 Games</a>
+                <a href="ps4.html" class="nav-button active">PS4 Games</a>
+                <a href="ps5.html" class="nav-button active">PS5 Games</a>
+                <a href="xbox.html" class="nav-button active">XBOX Games</a></li>
             </nav>
         </div>
     </div>
