--- a/ps2.html
+++ b/ps2.html
@@ -82,7 +82,7 @@
         const searchInput = document.getElementById("searchInput");
 
         // 2. Start by loading the CSV
-        Papa.parse("https://docs.google.com/spreadsheets/d/e/2PACX-1vT4GO8L79gTk5QRLiPag0AWktZWMivO9Mc09hpd_v79Bm5sV3wp8BtoyB3WjxdzX9Lz5m6WEkfr3JvU/pub?gid=692891241&single=true&output=csv", {
+        Papa.parse("ps2.csv", {
             download: true,
             header: true, 
             skipEmptyLines: true, 
