--- a/pc.html
+++ b/pc.html
@@ -27,7 +27,7 @@
         <button class="open-nav-btn" id="openNavBtn">&#9776;</button>
 
         <div class="header">
-            <img src="https://images.seeklogo.com/logo-png/29/1/playstation-2-logo-png_seeklogo-298960.png" alt="PC Logo" class="logo">
+            <img src="https://www.citypng.com/public/uploads/preview/pc-gamer-square-logo-image-png-701751694705789veh9j0sech.png" alt="PC Logo" class="logo">
             <h1>PC Game Library</h1>
         </div>
 
@@ -82,7 +82,7 @@
         const searchInput = document.getElementById("searchInput");
 
         // 2. Start by loading the CSV
-        Papa.parse("pc.csv", {
+        Papa.parse("https://docs.google.com/spreadsheets/d/e/2PACX-1vT4GO8L79gTk5QRLiPag0AWktZWMivO9Mc09hpd_v79Bm5sV3wp8BtoyB3WjxdzX9Lz5m6WEkfr3JvU/pub?gid=734279019&single=true&output=csv", {
             download: true,
             header: true, 
             skipEmptyLines: true, 
