--- a/xbox.html
+++ b/xbox.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deva Tech Services - XBOX</title>
     <link rel="stylesheet" href="style-app.css"> 
-    <link rel="icon" type="image/png" href="https://images.seeklogo.com/logo-png/29/1/playstation-2-logo-png_seeklogo-298960.png">
+    <link rel="icon" type="image/png" href="https://wallpapers.com/images/high/xbox-logo-icon-brt64s7zvwsixxl1.png">
 </head>
 <body> <nav id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
@@ -27,7 +27,7 @@
         <button class="open-nav-btn" id="openNavBtn">&#9776;</button>
 
         <div class="header">
-            <img src="https://images.seeklogo.com/logo-png/29/1/playstation-2-logo-png_seeklogo-298960.png" alt="PC Logo" class="logo">
+            <img src="https://wallpapers.com/images/high/xbox-logo-icon-brt64s7zvwsixxl1.png" alt="PC Logo" class="logo">
             <h1>XBOX Game Library</h1>
         </div>
 
