--- a/ps2.html
+++ b/ps2.html
@@ -120,7 +120,7 @@
                 const posterUrl = game[HEADER_POSTER];
                 
                 if (gameName) {
-                    const searchQuery = gameName + " GamePlay"; 
+                    const searchQuery = gameName + " PS2 GamePlay"; 
                     
                     // 2. URL-encode this new query
                     const encodedSearchQuery = encodeURIComponent(searchQuery);
