--- a/pc.html
+++ b/pc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deva Tech Services - PC</title>
+    <meta name="description" content="Browse our extensive PC Game Library. Search through 36,000+ PC games, view posters, and find gameplay videos.">
     <link rel="stylesheet" href="style-app.css"> 
     <link rel="icon" type="image/png" href="https://images.seeklogo.com/logo-png/29/1/playstation-2-logo-png_seeklogo-298960.png">
 </head>
