--- a/ps5.html
+++ b/ps5.html
@@ -23,7 +23,11 @@
             <li><a href="xbox.html" class="nav-link active">XBOX</a></li>
         </ul>
     </nav>
-    
+    <noscript>
+        <h1>Deva Tech Services Game Library</h1>
+        <p>This is a searchable database of over 1,00,000+ PC, XBOX and PlayStation games.</p>
+        <p>Please enable JavaScript to view the full interactive gallery.</p>
+    </noscript>
     <div id="mainContent" class="main-content">
         <button class="open-nav-btn" id="openNavBtn">&#9776;</button>
 
